plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'io.osowa'
version = '0.0.1-SNAPSHOT'
description = 'eiaun'

ext {
	lombokVersion = '1.18.42'
	apacheLang3Version = '3.20.0'
	apacheMath3Version = '3.6.1'
	apacheCollections4Version = '4.6.0'
	gsonVersion = '2.14.0'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation "org.apache.commons:commons-lang3:${apacheLang3Version}"
	implementation "org.apache.commons:commons-math3:${apacheMath3Version}"
	implementation "org.apache.commons:commons-collections4:${apacheCollections4Version}"
	implementation "com.google.code.gson:gson:${gsonVersion}"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	testLogging {
		events = ["passed", "skipped", "failed"] // , "standardOut", "standardError"
		exceptionFormat = "full"
		showStandardStreams = false
	}
}
